--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		</div>
 		<div id="copyright">
 			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
-			Copyright © 2011 <a href='http://chengjun.github.io'>chengjun</a> 2009-2011
+			Copyright © 2014 <a href='http://chengjun.github.io'>chengjun</a>
 		</div>
 	</div>
 	<script type="text/javascript">
