--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 				<span class="space"/><span class="comments">*/</span><br />
 				Boy i = <span class="keyword">new</span> Boy(<span class="string">"chengjun"</span>);<br />
 				Girl u = <span class="keyword">new</span> Girl(<span class="string">"xiaoqing");<br />
-				<span class="comments">// June 16, 2011, I told you I love you. </span><br />
+				<span class="comments">// In the September of 2004, I met you in LZU. </span><br />
+				i.meet(u);<br />
+				<span class="comments">// After 7 years, in June 16, 2011, </span><br />
+				<span class="comments">// I told you I love you. </span><br />
 				i.love(u);<br />
 				<span class="comments">// Luckily, you accepted and became my girlfriend ever since.</span><br />
 				u.accepted();<br />
@@ -77,7 +80,6 @@
 			</div>
 		</div>
 		<div id="copyright">
-			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
 			Copyright © 2014 <a href='http://chengjun.github.io'>chengjun</a>
 		</div>
 	</div>
