--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
 				<span id="t_d">00 </span> 
 				<span id="t_h">00 </span> 
 				<span id="t_m">00 </span> 
-				<span id="t_s">00 </span> 
+				<span id="t_s">00 </span> <br />
+				
 				<span class="comments">// Since Apr 10 2017, Mili had been born for </span><br />
 				<span id="t_d2">00 </span> 
 				<span id="t_h2">00 </span> 
 				<span id="t_m2">00 </span> 
-				<span id="t_s2">00 </span> 
+				<span id="t_s2">00 </span> <br />
 				
 				<!--<span id="k_d">00</span> 
 				<span id="k_h">00</span> 
