--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
 				<span id="t_m2">00 </span> 
 				<span id="t_s2">00 </span> <br />
 				
-				<!--<span id="k_d">00</span> 
-				<span id="k_h">00</span> 
-				<span id="k_m">00</span> 
-				<span id="k_s">00</span> -->
+				Family we = <span class="keyword">new</span> Family(<span class="string">"We are family!");<br />
+				we.liveHappilyTogether(<span class="string">"forever!");<br />
 			</div>
 			
 			<script id = "Mili" type="text/javascript"> 
